Bug fixes and keyboard & accessibility improvements - You can no longer change your password to nothing - Controls if the last wallet directory is gone - Closing dialogs with ESC - Text input-based seed verification for screen reader users - Tab key acts as expected on dialogs